ajuste: configuracao da rota de cron e acesso ao segredo

--- a/.planning/phases/03-monitoring-engine/03-03-PLAN.md
+++ b/.planning/phases/03-monitoring-engine/03-03-PLAN.md
@@ -2,11 +2,10 @@
 phase: 03-monitoring-engine
 plan: 03
 type: execute
-wave: 1
-depends_on: []
+wave: 2
+depends_on: ["03-01"]
 files_modified:
   - src/lib/openai/client.ts
-  - src/lib/validations/mention.ts
 autonomous: true
 
 must_haves:
@@ -47,6 +46,7 @@ Output: Two new functions added to the OpenAI client: classifyPostIntent and gen
 
 @src/lib/openai/client.ts
 @src/lib/validations/product.ts
+@src/lib/validations/mention.ts
 </context>
 
 <tasks>
