--- a/.planning/phases/03-monitoring-engine/03-05-PLAN.md
+++ b/.planning/phases/03-monitoring-engine/03-05-PLAN.md
@@ -2,8 +2,8 @@
 phase: 03-monitoring-engine
 plan: 05
 type: execute
-wave: 2
-depends_on: ["03-01"]
+wave: 4
+depends_on: ["03-01", "03-04"]
 files_modified:
   - src/app/(protected)/mentions/page.tsx
   - src/app/(protected)/mentions/[id]/page.tsx
